fix(Footer): hr horizontal overflow

--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -10,7 +10,7 @@
   padding-bottom: 0.75rem;
 
   hr {
-    width: 100%;
+    width: calc(100% - 0.125rem);
     margin: 0;
   }
 
